# rust-learning

./: Cargo.toml  task_manager.json
.metals/: metals.lock.db  metals.mv.db
channel_task/: Cargo.toml
channel_task/files/: data2.json
channel_task/src/: main.rs
discriminant_implementation/: Cargo.toml  README.md
discriminant_implementation/src/: main.rs
projects/future_rust/: Cargo.toml
projects/future_rust/src/: lib.rs
projects/hacker_rank/: Cargo.toml
projects/hacker_rank/src/: main.rs
projects/monitoring/src/: sysinfo_example.rs
projects/todolist-rust/: Cargo.toml
projects/todolist-rust/src/: lib.rs
projects/todolist_rust/: Cargo.toml
projects/todolist_rust/src/: lib.rs
projects/trait_rust/: Cargo.toml
projects/trait_rust/src/: lib.rs
src/: main.rs
src/control_flow/: learning.rs  mod.rs
src/data_types/: learning.rs
src/functions/: learning.rs
src/references_and_borrowing/: learning.rs
trait_example/: Cargo.toml  output2.csv  postgres_export.parquet
trait_example/src/: errors.rs  lib.rs  main.rs  pipelines.rs  sinks.rs  sources.rs  utils.rs
trait_example/src/jobs/: execution.rs  mod.rs  simple.rs
trait_example/src/pipelines/: mod.rs  simple.rs
