[package]
name = "channel_task"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.35", features = ["derive"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
walkdir = "2"