[package]
name = "trait_example"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.51", features = ["lazy", "csv", "parquet","json","lazy","strings","regex"] }
thiserror = "1"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"   # optional, better error source reporting
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1.89"
sqlx = {version = "0.8.6", features =["postgres","runtime-tokio","tls-rustls"]}
futures-util = "0.3"   # <-- add this (you can drop plain `futures` if unused)
